Bug 43134 - [SNA] Broken rendering in GIMP
Summary: [SNA] Broken rendering in GIMP
Status: RESOLVED FIXED
Alias: None
Product: xorg
Classification: Unclassified
Component: Driver/intel (show other bugs)
Version: git
Hardware: Other All
: medium normal
Assignee: Chris Wilson
QA Contact: Xorg Project Team
URL:
Whiteboard:
Keywords:
: 43024 (view as bug list)
Depends on:
Blocks:
 
Reported: 2011-11-21 02:23 UTC by Roman Jarosz
Modified: 2011-11-21 03:57 UTC (History)
1 user (show)

See Also:
i915 platform:
i915 features:


Attachments
Broken GIMP image rendering (183.05 KB, image/png)
2011-11-21 02:23 UTC, Roman Jarosz
no flags Details

Description Roman Jarosz 2011-11-21 02:23:42 UTC
Created attachment 53736 [details]
Broken GIMP image rendering

Steps to reproduce:
1. Open image or take screenshot
2. Maximize gimp windows
3. Change zoom (e.g. using wheel on mouse)
4. Instead of image only black/yellow stripes will be shown


The bug doesn't occur on all zooms, but I can reproduce it always even in other WM.

No composition
00:02.1 Display controller: Intel Corporation Mobile GM965/GL960 Integrated Graphics Controller (rev 0c)
Linux kedge 3.1.1 #1 SMP Tue Nov 15 00:00:22 CET 2011 x86_64 Intel(R) Core(TM)2 Duo CPU T8100 @ 2.10GHz GenuineIntel GNU/Linux

Also the attached screenshot shows broken glow rendering in Dolphin, but this happens only sometimes.
Comment 1 Roman Jarosz 2011-11-21 02:24:21 UTC
Using latest git "sna: Micro-optimise sna_push_pixels_solid_blt()"
Comment 2 Chris Wilson 2011-11-21 03:11:57 UTC
*** Bug 43024 has been marked as a duplicate of this bug. ***
Comment 3 Chris Wilson 2011-11-21 03:30:40 UTC
That looks like the marching ants have taken over the entire image.
Comment 4 Chris Wilson 2011-11-21 03:57:21 UTC
commit b0d64a9567d9cb749568448e4ce090b187308028
Author: Chris Wilson <chris@chris-wilson.co.uk>
Date:   Mon Nov 21 11:49:49 2011 +0000

    sna: Correct end-point adjustment for stippling PolySegment
    
    Reported-by: Roman Jarosz <kedgedev@gmail.com>
    Reported-by: da_fox@mad.scientist.com
    Bugzilla: https://bugs.freedesktop.org/show_bug.cgi?id=43134
    Signed-off-by: Chris Wilson <chris@chris-wilson.co.uk>

Roman, let's continue to track the input focus corruption on bug 41236 (and I don't have any clear idea yet...)


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.